--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.audiorecorder"
+        applicationId "com.wingsmight.audiorecorder"
         minSdkVersion 21
         targetSdkVersion 31
         versionCode 1
