--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AudioRecorder">
+        android:theme="@style/Theme.AudioRecorder.NoActionBar">
         <activity
             android:name=".ui.settings.DoNotDisturbIntervalActivity"
             android:label="@string/title_activity_do_not_disturb_interval"
