--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,21 +12,28 @@
         <activity
             android:name=".ui.settings.DoNotDisturbIntervalActivity"
             android:label="@string/title_activity_do_not_disturb_interval"
-            android:theme="@style/Theme.AudioRecorder.NoActionBar"></activity>
+            android:theme="@style/Theme.AudioRecorder.NoActionBar"/>
         <activity
             android:name=".ui.settings.AppInfoActivity"
             android:label="@string/title_activity_app_info"
-            android:theme="@style/Theme.AudioRecorder"></activity>
+            android:theme="@style/Theme.AudioRecorder"/>
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.login.LogInActivity"
+            android:label="Вход"
+            android:theme="@style/Theme.AudioRecorder"/>
+        <activity
+            android:name=".ui.login.SignUpActivity"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="@string/app_name"/>
     </application>
 
 </manifest>
