fix crush on first loading & add recording volume animation

--- a/models/build.gradle
+++ b/models/build.gradle
@@ -16,14 +16,14 @@ android {
     }
 }
 
-tasks.register('genUUID') {
-    def uuid = UUID.randomUUID().toString()
-    def odir = file("$buildDir/generated/assets/model-small-ru-0.22")
-    def ofile = file("$odir/uuid")
-    doLast {
-        mkdir odir
-        ofile.text = uuid
-    }
-}
-
-preBuild.dependsOn(genUUID)
+//tasks.register('genUUID') {
+//    def uuid = UUID.randomUUID().toString()
+//    def odir = file("$buildDir/generated/assets/model-small-ru-0.22")
+//    def ofile = file("$odir/uuid")
+//    doLast {
+//        mkdir odir
+//        ofile.text = uuid
+//    }
+//}
+//
+//preBuild.dependsOn(genUUID)
