--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,11 @@ android {
         applicationId "com.wingsmight.audiorecorder"
         minSdkVersion 21
         targetSdkVersion 31
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.0.1"
+        ndk {
+            abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86_64', 'x86'
+        }
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -51,6 +54,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'net.java.dev.jna:jna:5.8.0@aar'
-    implementation group: 'com.alphacephei', name: 'vosk-android', version: '0.3.32'
+    implementation group: 'com.alphacephei', name: 'vosk-android', version: '0.3.32+'
     implementation project(':models')
 }
